 - Added JSON$() function from the CMM2
   - MMB4L adds an optional 3rd parameter which is a 2 bit argument controlling
     how explicit nulls and missing values are handled in the JSON:
       - &b00 : return empty strings for both.
       - &b01 : return "<null>" for explicit null.
       - &b10 : return "<missing>" for missing value.
       - &b11 : return both "<null>" and "<missing>".
 - Added MID$ command (as opposed to the already existing MID$() function) from
   the CMM2.
 - Added support for prefixing paths with '~' which is expanded to the
   users home directory (the value of the HOME envrionment variable).
 - Changed CONSOLE SETCURSOR command to allow a maximum x, y of 1023
   (previously 255) and updated "examples/mandelbrot.bas" to support this.
 - Added optional integer argument (default 1) to ERROR command allowing an error
   code to be specified, this can be retrieved using MM.ERRNO, e.g.
       ERROR "error message", 220
   For MMB4L the values of MM.ERRNO are:
    - 0        : no error.
    - 1        : unclassified MMBasic error, also reported if a C library call
                 reports the error EPERM (Operation not permitted).
                 Note this differs from other versions of MMBasic which use the
                 value of 16 for general errors, which would correspond to the
                 EBUSY (Device or resource busy) error from a C library call.
    - 2..150   : standard error numbers (errno) for C library calls.
    - 151..200 : reserved for future classification of MMBasic errors.
    - 201..255 : suggested range for program specific error codes.
    - error codes from the SYSTEM command are an exception to this rule,
      see the next entry.
 - Changed SYSTEM command to set MM.ERRNO equal to the executed program's
   exit code. Also changed error message to include this value.
 - Changed "mmbasic.nanorc" to make behaviour more like the CMM2 editor: